--- a/preamble.tex
+++ b/preamble.tex
@@ -190,6 +190,7 @@ vlined]{algorithm2e}
 \newcommand{\eg}{e.g., }
 \newcommand{\ie}{i.e., }
 \newcommand{\loccit}{\emph{loc.~cit.\ }}
+\newcommand{\vs}{vs.\ }
 
 \newcommand{\muCool}{$\mu$-uniform\xspace}
 \newcommand{\nuCool}{$\nu$-uniform\xspace}
