Commented out note, and uncommented pic

--- a/aip.tex
+++ b/aip.tex
@@ -2279,8 +2279,8 @@ We now consider certain subgraphs of the directed sprouting graph, whose definit
    \label{ex: new example}
    \begin{figure}
       \centering
-      \daniel[inline]{Pedro:  Can you place a copy of this in the dropbox folder?  In the meantime, I am omitting this, so that the document will compile.}
-%      \includegraphics[width=.6\textwidth]{pictures/sprouting_graph_4.pdf}
+%      \daniel[inline]{Pedro:  Can you place a copy of this in the dropbox folder?  In the meantime, I am omitting this, so that the document will compile.}
+      \includegraphics[width=.6\textwidth]{pictures/sprouting_graph_4.pdf}
       \caption{The sprouting subgraph for \Cref{ex: new example}}
       \label{fig: sprouting graph 2}
    \end{figure}
