--- a/preamble.tex
+++ b/preamble.tex
@@ -189,7 +189,7 @@ vlined]{algorithm2e}
 \newcommand{\cf}{\emph{cf}.\ }
 \newcommand{\eg}{e.g., }
 \newcommand{\ie}{i.e., }
-\newcommand{\loccit}{\emph{loc.~cit.\ }}
+\newcommand{\loccit}{\emph{loc.~cit.}}
 \newcommand{\vs}{vs.\ }
 
 \newcommand{\muCool}{$\mu$-uniform\xspace}
